[package]
authors = ["Architect Financial Technologies <hello@architect.xyz>"]
categories = ["command-line-utilities"]
keywords = ["s6", "s6-rc", "supervision", "systemd"]
repository = "https://github.com/architect-xyz/s7"
license = "MIT"
name = "s7"
version = "0.1.0"
edition = "2021"
description = "simple configuration tool for s6"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
indoc = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
